--- a/sources/API/aggregatedResults/CMakeLists.txt
+++ b/sources/API/aggregatedResults/CMakeLists.txt
@@ -34,4 +34,9 @@ target_link_libraries(dynawo_algorithms_API_AggregatedResults
   XMLSAXParser${LibXML_LINK_SUFFIX}
   )
 
-install(TARGETS dynawo_algorithms_API_AggregatedResults EXPORT dynawo_algorithms-targets DESTINATION ${LIBDIR_NAME})
+install(TARGETS dynawo_algorithms_API_AggregatedResults
+  EXPORT dynawo_algorithms-targets
+  RUNTIME DESTINATION ${BINDIR_NAME}
+  LIBRARY DESTINATION ${LIBDIR_NAME}
+  ARCHIVE DESTINATION ${LIBDIR_NAME}
+  )
