--- a/sources/API/aggregatedResults/test/CMakeLists.txt
+++ b/sources/API/aggregatedResults/test/CMakeLists.txt
@@ -29,7 +29,7 @@ add_custom_target(${MODULE_NAME}-pre-tests
   )
 
 add_custom_target(${MODULE_NAME}-tests
-  COMMAND ${CMAKE_COMMAND} -E env "${runtime_tests_PATH}" $<TARGET_FILE:${MODULE_NAME}>
+  COMMAND ${CMAKE_COMMAND} -E env ${runtime_tests_ENV} $<TARGET_FILE:${MODULE_NAME}>
   DEPENDS
     ${MODULE_NAME}-pre-tests
     ${MODULE_NAME}
