--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -105,6 +105,12 @@ jobs:
           export DYNAWO_ALGORITHMS_HOME=$(pwd)
           util/envDynawoAlgorithms.sh build
 
+      - name: Build documentation
+        run: |
+          export DYNAWO_HOME=$(pwd)/dynawo
+          export DYNAWO_ALGORITHMS_HOME=$(pwd)
+          util/envDynawoAlgorithms.sh build-doc
+
       - name: Prepare files for distribution
         run: |
           export DYNAWO_HOME=$(pwd)/dynawo
@@ -121,6 +127,7 @@ jobs:
           tag_name: ${{ env.DYNAWO_TAG }}
           files: |
             distributions/*.zip
+            documentation/dynawoAlgorithmsDocumentation/DynawoAlgorithmsDocumentation.pdf
 
       # The secrets.DISPATCH_TOKEN should contain a fine-grained PAT with access to dynawo/dynaflow-launcher with Repository permissions 'Contents: Read and write'
       - name: Tell dynaflow-launcher the nightly release is ready
