--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -130,15 +130,16 @@
                 { "name": "DYNAWO_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo" },
                 { "name": "DYNAWO_SCRIPTS_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo/sbin" },
                 { "name": "DYNAWO_DICTIONARIES", "value" : "dictionaries_mapping" },
-                { "name": "DYNAWO_ADEPT_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo" },
-                { "name": "DYNAWO_INSTALL_OPENMODELICA", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo/OpenModelica" },
-                { "name": "DYNAWO_XERCESC_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo" },
-                { "name": "DYNAWO_SUITESPARSE_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo" },
-                { "name": "DYNAWO_SUNDIALS_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo" },
-                { "name": "DYNAWO_BOOST_HOME", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo" },
-                { "name": "DYNAWO_LIBXML_HOME", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo" },
-                { "name": "DYNAWO_NICSLU_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo" },
-                { "name": "LD_LIBRARY_PATH", "value" : "${env:LD_LIBRARY_PATH}:${workspaceFolder}/build-code/install/3rdParty/Debug/gperftools/lib:${workspaceFolder}/build-code/install/3rdParty/Debug/mpich/lib:${workspaceFolder}/build-code/install/dynawo-algorithms/Debug/lib:${workspaceFolder}/../dynawo/build-code/deploy/Debug/dynawo/lib" }
+                { "name": "DYNAWO_ADEPT_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_INSTALL_OPENMODELICA", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/OpenModelica" },
+                { "name": "OPENMODELICAHOME", "value" : "${workspaceFolder}/../dynawo/build-code/deploy/OpenModelica" },
+                { "name": "DYNAWO_XERCESC_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_SUITESPARSE_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_SUNDIALS_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_BOOST_HOME", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_LIBXML_HOME", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "DYNAWO_NICSLU_INSTALL_DIR", "value" : "${workspaceFolder}/../dynawo/build-code/deploy" },
+                { "name": "LD_LIBRARY_PATH", "value" : "${env:LD_LIBRARY_PATH}:${workspaceFolder}/build-code/install/3rdParty/gperftools/lib:${workspaceFolder}/build-code/install/3rdParty/mpich/lib:${workspaceFolder}/build-code/install/dynawo-algorithms/lib:${workspaceFolder}/../dynawo/build-code/deploy/lib" }
             ],
             "externalConsole": false,
             "MIMode": "gdb",
