#337 add Nightly Release for Windows
Signed-off-by: Frédéric Vallée <frederic.vallee@rte-france.com>

--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -5,6 +5,9 @@ on:
   schedule:
     - cron:  "0 1 * * 1-5"
 
+env:
+  DYNAWO_VERSION: 1.6.0
+
 jobs:
   fedora:
     name: Linux Fedora (Release, GCC, cxx11)
@@ -17,7 +20,6 @@ jobs:
       DYNAWO_BUILD_TYPE: Release
       DYNAWO_FORCE_CXX11_ABI: "true"
       DYNAWO_NB_PROCESSORS_USED: 2
-      DYNAWO_VERSION: 1.6.0
       GH_API: ${{ github.api_url }}/repos/${{ github.repository }}
       GH_API_DYNAWO: ${{ github.api_url }}/repos/${{ github.repository_owner }}/dynawo
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -167,3 +169,95 @@ jobs:
 
       - name: INFO. Release assets
         run: eval $CURL_JSON $ASSETS_URL
+
+  windows:
+    name: Windows 2019 (Release, VS2019)
+    runs-on: windows-2019
+    needs: fedora
+    steps:
+      - name: No LF to CRLF conversion
+        shell: cmd
+        run: git config --global core.autocrlf input
+
+      - name: Checkout sources
+        uses: actions/checkout@v3
+
+      - name: Download MS-MPI
+        shell: bash
+        run: |
+          curl -Os https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisdk.msi
+          curl -Os https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisetup.exe
+
+      - name: Install MS-MPI
+        shell: cmd
+        run: |
+          msmpisdk.msi /passive
+          msmpisetup.exe /unattend
+
+      - name: Fetch Dynawo
+        shell: bash
+        run: curl -LOs https://github.com/dynawo/dynawo/releases/download/nightly/Dynawo_Windows_v$DYNAWO_VERSION.zip
+
+      - name: Unzip Dynawo
+        shell: cmd
+        run: 7z x Dynawo_Windows_v%DYNAWO_VERSION%.zip -o..\deploy
+
+      - name: Dynawo version
+        shell: cmd
+        run: ..\deploy\dynawo\dynawo version
+
+      # use a minimal PATH to avoid too long command lines and conflict with Strawberry pkg-config !
+      - name: Build and install
+        shell: cmd
+        env:
+          MSMPI_INC: C:\Program Files (x86)\Microsoft SDKs\MPI\Include\
+          MSMPI_LIB32: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x86\
+          MSMPI_LIB64: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64\
+          PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
+        run: |
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+          call util\windows\dynawo-algorithms verbose build
+
+      - name: Dynawo-Algorithms version
+        shell: cmd
+        env:
+          PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
+        run: call ..\da-i\dynawo-algorithms verbose version
+
+      - name: Run NRT
+        shell: cmd
+        env:
+          MSMPI_BENCHMARKS: C:\Program Files\Microsoft MPI\Benchmarks\
+          MSMPI_BIN: C:\Program Files\Microsoft MPI\Bin\
+          PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64;C:\hostedtoolcache\windows\Python\3.7.9\x64\Scripts
+        run: |
+          pip install lxml psutil
+          set PATH=%MSMPI_BIN%;%PATH%
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+          call util\windows\dynawo-algorithms verbose nrt
+
+      - name: Create distribution
+        shell: cmd
+        env:
+          PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
+        run: |
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+          call util\windows\dynawo-algorithms verbose distrib-headers
+          dir ..\distrib
+
+      - name: Rename distribution
+        shell: bash
+        run: |
+          cd ../distrib
+          zip=$(ls DynawoAlgorithms_*.zip)
+          version=$(echo $zip | cut -d '_' -f 4 | cut -d '.' -f 1-3)
+          distrib=DynawoAlgorithms_Windows_$version.zip
+          mv $zip $distrib
+          echo "ZIP=$distrib" >> $GITHUB_OUTPUT
+        id: distrib
+
+      - name: Upload distribution
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: nightly
+          files: ../distrib/${{steps.distrib.outputs.ZIP}}
