--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -38,48 +38,33 @@ jobs:
     name: Prepare nightly tag and release
     runs-on: ubuntu-latest
     steps:
-      - name: Delete previous nightly tag and release if necessary
+      - name: Fetch release script
+        uses: actions/checkout@v3
+        with:
+          repository: dynawo/dynawo
+          sparse-checkout: .github/release.js
+          sparse-checkout-cone-mode: false
+
+      - name: Create nightly tag and release if necessary
         uses: actions/github-script@v6
-        with:
-          script: |
-            const { owner, repo } = context.repo;
-            try {
-              const { data: { object: { sha: sha_nightly } } } = await github.rest.git.getRef({ owner, repo, ref: "tags/${{ env.DYNAWO_TAG }}" });
-              const { data: { object: { sha: sha_master } } } = await github.rest.git.getRef({ owner, repo, ref: "heads/master" });
-              console.log("Current nightly tag SHA is:", sha_nightly);
-              console.log("Current master SHA is:", sha_master);
-
-              if (sha_nightly !== sha_master) {
-                try {
-                  const { data: { id: release_id } } = await github.rest.repos.getReleaseByTag({ owner, repo, tag: "${{ env.DYNAWO_TAG }}" });
-                  await github.rest.repos.deleteRelease({ owner, repo, release_id });
-                  console.log("Previous nightly release id", release_id, "was deleted.")
-                } catch (e) {
-                  console.log("Previous nightly release not found !");
-                }
-    
-                await github.rest.git.deleteRef({ owner, repo, ref: "tags/${{ env.DYNAWO_TAG }}" });
-                console.log("Previous nightly tag was deleted.")
-              }
-            } catch (e) {
-              console.log("Previous nightly tag not found !");
-            }
-
-      - name: Create newly nightly tag and release if necessary
-        uses: softprops/action-gh-release@v1
-        with:
+        env:
           body: |
             DynawoAlgorithms's nightly release. Compiled on *release* settings.
             
             **Don't use it for production**
           draft: false
           prerelease: true
-          name: Nightly
+          release_name: Nightly
           tag_name: ${{ env.DYNAWO_TAG }}
-          target_commitish: "refs/heads/master"
+          target_commitish: heads/master
+        with:
+          retries: 3
+          script: |
+            const release = require('.github/release.js')
+            await release({github, context, core, glob})
 
   fedora:
-    if: github.event.action == 'nightly-linux' || (github.event_name == 'workflow_dispatch' && inputs.perform-linux) || !endsWith(github.event_name, '_dispatch')
+    if: always() && !cancelled() && !failure() && (github.event.action == 'nightly-linux' || (github.event_name == 'workflow_dispatch' && inputs.perform-linux) || !endsWith(github.event_name, '_dispatch'))
     name: Linux Fedora (Release, GCC, cxx11)
     runs-on: ubuntu-latest
     container: dynawo/dynawo-distribution-cxx11:latest
@@ -121,13 +106,28 @@ jobs:
       - name: INFO. Files created in distributions folder
         run: du -hs distributions/*
 
-      - name: Upload assets for release
-        uses: softprops/action-gh-release@v1
+      - name: Fetch release script
+        uses: actions/checkout@v3
         with:
+          repository: dynawo/dynawo
+          sparse-checkout: .github/release.js
+          sparse-checkout-cone-mode: false
+          path: dynawo
+
+      - name: Upload assets for release
+        uses: actions/github-script@v6
+        env:
           tag_name: ${{ env.DYNAWO_TAG }}
+          draft: false
+          prerelease: true
           files: |
             distributions/*.zip
             documentation/dynawoAlgorithmsDocumentation/DynawoAlgorithmsDocumentation.pdf
+        with:
+          retries: 3
+          script: |
+            const release = require('./dynawo/.github/release.js')
+            await release({github, context, core, glob})
 
       # The secrets.DISPATCH_TOKEN should contain a fine-grained PAT with access to dynawo/dynaflow-launcher with Repository permissions 'Contents: Read and write'
       - name: Tell dynaflow-launcher the nightly release is ready
@@ -139,7 +139,7 @@ jobs:
             await github.rest.repos.createDispatchEvent({ owner: context.repo.owner, repo: "dynaflow-launcher", event_type: "nightly-linux" });
 
   windows:
-    if: github.event.action == 'nightly-windows' || (github.event_name == 'workflow_dispatch' && inputs.perform-windows) || !endsWith(github.event_name, '_dispatch')
+    if: always() && !cancelled() && !failure() && (github.event.action == 'nightly-windows' || (github.event_name == 'workflow_dispatch' && inputs.perform-windows) || !endsWith(github.event_name, '_dispatch'))
     name: Windows 2019 (Release, VS2019)
     runs-on: windows-2019
     needs: nightly
@@ -185,13 +185,13 @@ jobs:
           PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
         run: |
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-          call util\windows\dynawo-algorithms verbose build
+          call util\windows\dynawo-algorithms verbose build || exit /b 1
 
       - name: Dynawo-algorithms version
         shell: cmd
         env:
           PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
-        run: call ..\da-i\dynawo-algorithms verbose version
+        run: call ..\da-i\dynawo-algorithms verbose version || exit /b 1
 
       - name: Run NRT
         if: github.event_name != 'workflow_dispatch' || inputs.perform-nrt
@@ -204,7 +204,7 @@ jobs:
           pip install lxml psutil
           set PATH=%MSMPI_BIN%;%PATH%
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-          call util\windows\dynawo-algorithms verbose nrt
+          call util\windows\dynawo-algorithms verbose nrt || exit /b 1
 
       - name: Create distribution
         shell: cmd
@@ -212,19 +212,35 @@ jobs:
           PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
         run: |
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-          call util\windows\dynawo-algorithms verbose distrib-headers
-          dir ..\distrib
+          call util\windows\dynawo-algorithms verbose distrib-headers distrib || exit /b 1
 
-      - name: Rename distribution
+      - name: INFO. Files created in distrib folder
         shell: bash
-        run: for file in ../distrib/DynawoAlgorithms_*.zip ; do mv $file ${file//headers_Release/Windows} ; done
+        run: |
+          du -hs distrib/*
+          for file in distrib/DynawoAlgorithms_*.zip ; do mv $file ${file//headers_Release/Windows} ; done
+
+      - name: Fetch release script
+        uses: actions/checkout@v3
+        with:
+          repository: dynawo/dynawo
+          sparse-checkout: .github/release.js
+          sparse-checkout-cone-mode: false
+          path: dynawo
 
       - name: Upload distribution
-        uses: softprops/action-gh-release@v1
-        with:
+        uses: actions/github-script@v6
+        env:
           tag_name: ${{ env.DYNAWO_TAG }}
+          draft: false
+          prerelease: true
           files: |
-            ../distrib/DynawoAlgorithms_*.zip
+            distrib/DynawoAlgorithms_*.zip
+        with:
+          retries: 3
+          script: |
+            const release = require('./dynawo/.github/release.js')
+            await release({github, context, core, glob})
 
       - name: Tell dynaflow-launcher the nightly release is ready
         if: github.event_name != 'workflow_dispatch' || inputs.perform-dispatch
@@ -233,4 +249,3 @@ jobs:
           github-token: ${{ secrets.DISPATCH_TOKEN }}
           script: |
             await github.rest.repos.createDispatchEvent({ owner: context.repo.owner, repo: "dynaflow-launcher", event_type: "nightly-windows" });
-  
