#361 enhance published release
Signed-off-by: Frédéric Vallée <frederic.vallee@rte-france.com>

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Unzip Dynawo
         run: |
-          unzip "Dynawo_omc_v${DYNAWO_VERSION}.zip"
+          unzip -qq "Dynawo_omc_v${DYNAWO_VERSION}.zip"
 
       - name: Dynawo version
         run: ./dynawo/dynawo.sh version
