--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Fetch release script
         uses: actions/checkout@v3
         with:
-          repository: dynawo/dynawo
+          repository: ${{ github.repository_owner }}/dynawo
           sparse-checkout: .github/release.js
           sparse-checkout-cone-mode: false
 
@@ -79,7 +79,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Fetch Dynawo's nightly release
-        run: curl -LOs https://github.com/dynawo/dynawo/releases/download/nightly/Dynawo_headers_v$DYNAWO_VERSION.zip
+        run: curl -LOs https://github.com/${{ github.repository_owner }}/dynawo/releases/download/nightly/Dynawo_headers_v$DYNAWO_VERSION.zip
 
       - name: Unzip Dynawo
         run: unzip -qq "Dynawo_headers_v${DYNAWO_VERSION}.zip"
@@ -109,7 +109,7 @@ jobs:
       - name: Fetch release script
         uses: actions/checkout@v3
         with:
-          repository: dynawo/dynawo
+          repository: ${{ github.repository_owner }}/dynawo
           sparse-checkout: .github/release.js
           sparse-checkout-cone-mode: false
           path: dynawo
@@ -165,7 +165,7 @@ jobs:
 
       - name: Fetch Dynawo's nightly release
         shell: bash
-        run: curl -LOs https://github.com/dynawo/dynawo/releases/download/nightly/Dynawo_Windows_v$DYNAWO_VERSION.zip
+        run: curl -LOs https://github.com/${{ github.repository_owner }}/dynawo/releases/download/nightly/Dynawo_Windows_v$DYNAWO_VERSION.zip
 
       - name: Unzip Dynawo
         shell: cmd
@@ -223,7 +223,7 @@ jobs:
       - name: Fetch release script
         uses: actions/checkout@v3
         with:
-          repository: dynawo/dynawo
+          repository: ${{ github.repository_owner }}/dynawo
           sparse-checkout: .github/release.js
           sparse-checkout-cone-mode: false
           path: dynawo
