--- a/sources/Common/CMakeLists.txt
+++ b/sources/Common/CMakeLists.txt
@@ -51,7 +51,7 @@ set(DYN_ALGO_COMMON_SOURCES
   DYNLoadIncrease.cpp
   DYNSimulationResult.cpp
   DYNLoadIncreaseResult.cpp
-  DYNMPIContext.cpp
+  DYNMultiProcessingContext.cpp
   ${CPP_KEYS}
   )
 
@@ -61,10 +61,14 @@ set(DYN_ALGO_COMMON_HEADERS
   DYNScenarios.h
   DYNSimulationResult.h
   DYNLoadIncreaseResult.h
-  DYNMPIContext.h
-  DYNMPIContext.hpp
+  DYNMultiProcessingContext.h
   ${INCLUDE_KEYS}
   )
+
+if (USE_MPI STREQUAL "YES")
+  list(APPEND DYN_ALGO_COMMON_HEADERS
+        DYNMultiProcessingContext.hpp)
+endif()
 
 add_library(dynawo_algorithms_Common SHARED ${DYN_ALGO_COMMON_SOURCES})
 add_dependencies(dynawo_algorithms_Common create_keys_files)
@@ -80,7 +84,7 @@ target_include_directories(dynawo_algorithms_Common
 
 target_link_libraries(dynawo_algorithms_Common
   Dynawo::dynawo_Common
-  MPI::MPI_CXX
+  $<$<STREQUAL:${USE_MPI},YES>:MPI::MPI_CXX>
   )
 
 install(TARGETS dynawo_algorithms_Common
