--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,11 +188,14 @@ find_package(Dynawo 1.7.0 REQUIRED)
 find_package(XercesC REQUIRED)
 # end of hack
 
-set(MPI_HOME ${DYNAWO_ALGORITHMS_THIRD_PARTY_DIR}/mpich)
-find_package(MPI REQUIRED)
-if(MPI_FOUND)
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MPI_C_FLAGS}")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MPI_CXX_FLAGS}")
+if(USE_MPI STREQUAL "YES")
+  set(MPI_HOME ${DYNAWO_ALGORITHMS_THIRD_PARTY_DIR}/mpich)
+  find_package(MPI REQUIRED)
+  if(MPI_FOUND)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MPI_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MPI_CXX_FLAGS}")
+  endif()
+  add_compile_definitions(_MPI_)
 endif()
 
 if(BUILD_TESTS_COVERAGE)
