--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -65,13 +65,19 @@ jobs:
 
   fedora:
     if: always() && !cancelled() && !failure() && (github.event.action == 'nightly-linux' || (github.event_name == 'workflow_dispatch' && inputs.perform-linux) || !endsWith(github.event_name, '_dispatch'))
-    name: Linux Fedora (Release, GCC, cxx11)
+    name: Linux Fedora (Release, GCC, cxx11) (${{ matrix.use-mpi.text }})
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        use-mpi:
+          - { value: YES, text: 'with MPI' }
+          - { value: NO, text: 'without MPI' }
     needs: nightly
     env:
       DYNAWO_RESULTS_SHOW: "false"
       DYNAWO_BUILD_TYPE: Release
       DYNAWO_FORCE_CXX11_ABI: "true"
+      DYNAWO_USE_MPI: ${{ matrix.use-mpi.value }}
       DYNAWO_NB_PROCESSORS_USED: 2
     steps:
       - name: Checkout
@@ -87,7 +93,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: dynawo/dynawo-distribution-cxx11:latest
-          options: -v ${{ github.workspace }}:/dynawo-algorithms -e DYNAWO_RESULTS_SHOW -e DYNAWO_BUILD_TYPE -e DYNAWO_FORCE_CXX11_ABI -e DYNAWO_NB_PROCESSORS_USED
+          options: -v ${{ github.workspace }}:/dynawo-algorithms -e DYNAWO_RESULTS_SHOW -e DYNAWO_BUILD_TYPE -e DYNAWO_FORCE_CXX11_ABI -e DYNAWO_NB_PROCESSORS_USED -e DYNAWO_USE_MPI
           shell: bash
           run: |
             export DYNAWO_HOME=$(pwd)/dynawo
@@ -101,6 +107,7 @@ jobs:
         run: du -hs distributions/*
 
       - name: Fetch release script
+        if: ${{ matrix.use-mpi.value == 'YES' }}
         uses: actions/checkout@v4
         with:
           repository: ${{ github.repository_owner }}/dynawo
@@ -109,6 +116,7 @@ jobs:
           path: dynawo
 
       - name: Upload assets for release
+        if: ${{ matrix.use-mpi.value == 'YES' }}
         uses: actions/github-script@v6
         env:
           tag_name: ${{ env.DYNAWO_TAG }}
@@ -125,7 +133,7 @@ jobs:
 
       # The secrets.DISPATCH_TOKEN should contain a fine-grained PAT with access to dynawo/dynaflow-launcher with Repository permissions 'Contents: Read and write'
       - name: Tell dynaflow-launcher the nightly release is ready
-        if: github.event_name != 'workflow_dispatch' || inputs.perform-dispatch
+        if: matrix.use-mpi.value == 'YES' && (github.event_name != 'workflow_dispatch' || inputs.perform-dispatch)
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.DISPATCH_TOKEN }}
@@ -134,9 +142,16 @@ jobs:
 
   windows:
     if: always() && !cancelled() && !failure() && (github.event.action == 'nightly-windows' || (github.event_name == 'workflow_dispatch' && inputs.perform-windows) || !endsWith(github.event_name, '_dispatch'))
-    name: Windows 2019 (Release, VS2019)
+    name: Windows 2019 (Release, VS2019) (${{ matrix.use-mpi.text }})
     runs-on: windows-2019
+    strategy:
+      matrix:
+        use-mpi:
+          - { value: YES, text: 'with MPI' }
+          - { value: NO, text: 'without MPI' }
     needs: nightly
+    env:
+      DYNAWO_USE_MPI: ${{ matrix.use-mpi.value }}
     steps:
       - name: No LF to CRLF conversion
         shell: cmd
@@ -146,12 +161,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download MS-MPI
+        if: ${{ matrix.use-mpi.value == 'YES' }}
         shell: bash
         run: |
           curl -Os https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisdk.msi
           curl -Os https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisetup.exe
 
       - name: Install MS-MPI
+        if: ${{ matrix.use-mpi.value == 'YES' }}
         shell: cmd
         run: |
           msmpisdk.msi /passive
@@ -173,11 +190,13 @@ jobs:
       - name: Build and install
         shell: cmd
         env:
-          MSMPI_INC: C:\Program Files (x86)\Microsoft SDKs\MPI\Include\
-          MSMPI_LIB32: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x86\
-          MSMPI_LIB64: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64\
           PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
         run: |
+          if "${{ matrix.use-mpi.value }}" == "YES" (
+            set "MSMPI_INC=C:\Program Files (x86)\Microsoft SDKs\MPI\Include\"
+            set "MSMPI_LIB32=C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x86\"
+            set "MSMPI_LIB64=C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64\"
+          )
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           call util\windows\dynawo-algorithms verbose build || exit /b 1
 
@@ -188,7 +207,7 @@ jobs:
         run: call ..\da-i\dynawo-algorithms verbose version || exit /b 1
 
       - name: Run NRT
-        if: github.event_name != 'workflow_dispatch' || inputs.perform-nrt
+        if: matrix.use-mpi.value == 'YES' && (github.event_name != 'workflow_dispatch' || inputs.perform-nrt)
         shell: cmd
         env:
           MSMPI_BENCHMARKS: C:\Program Files\Microsoft MPI\Benchmarks\
@@ -212,7 +231,11 @@ jobs:
         shell: bash
         run: |
           du -hs distrib/*
-          for file in distrib/DynawoAlgorithms_*.zip ; do mv $file ${file//headers_Release/Windows} ; done
+          if [ "${{ matrix.use-mpi.value }}" == "YES" ]; then
+            for file in distrib/DynawoAlgorithms_*.zip ; do mv $file ${file//headers_Release/Windows} ; done
+          else
+            for file in distrib/DynawoAlgorithms_*.zip ; do mv $file ${file//headers_Release/Windows_without_mpi} ; done
+          fi
 
       - name: Fetch release script
         uses: actions/checkout@v4
@@ -237,7 +260,7 @@ jobs:
             await release({github, context, core, glob})
 
       - name: Tell dynaflow-launcher the nightly release is ready
-        if: github.event_name != 'workflow_dispatch' || inputs.perform-dispatch
+        if: matrix.use-mpi.value == 'YES' && (github.event_name != 'workflow_dispatch' || inputs.perform-dispatch)
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.DISPATCH_TOKEN }}
